--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</div>
 					<p class="lead">Data Scientiest · Analyst / Backend Developer </p>
 					<p class="jg">끊임없이 배움을 향해 나아가는 Passionate Person 입니다.</p>
-					<p class="jg">Github : <a href='https://github.com/parkeunsang/' target="_blank" style="cursor:pointer;color:#6666ff;"> Link </a><br>
+					<p class="jg">Github : <a href='https://github.com/hellodonghee/' target="_blank" style="cursor:pointer;color:#6666ff;"> Link </a><br>
 						Blog : <a href='https://parkeunsang.github.io/blog/' target="_blank" style="cursor:pointer;color:#6666ff;"> Link </a><br>
 						E-mail : edwardfdsp@gmail.com
 					</p>
