--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 				<div class="col-md-10 text-center pt-5">
 
 					<h1 class="site-heading site-animate">Hello,<strong class="d-block"></strong></h1>
-					<h1 class="site-heading site-animate">I'm <strong class="d-block">DongHee Choi</strong></h1>
+					<h1 class="site-heading site-animate">I'm <strong class="d-block">DongHee Choi. </strong></h1>
+					<h1 class="site-heading site-animate">Data Scientist. <strong class="d-block"></strong></h1>
 					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Rezume</strong>
 
 				</div>
