--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
 
 
-	<section class="site-hero" style="background-image: url(images/profile_travel.jpg);" id="section-home" data-stellar-background-ratio="0.5">
+	<section class="site-hero" style="background-image: url(images/iu_1.webp);" id="section-home" data-stellar-background-ratio="0.5">
 		<div class="container">
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
 
 					<h1 class="site-heading site-animate">Hello,<strong class="d-block"></strong></h1>
 					<h1 class="site-heading site-animate">I'm <strong class="d-block">DongHee Choi. </strong></h1>
-					<h1 class="site-heading site-animate">Data Scientist. <strong class="d-block"></strong></h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Rezume</strong>
+					
+					<strong class="d-block text-white text-uppercase letter-spacing">Data Scientist.</strong>
 
 				</div>
 			</div>
