--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
+	<title>최동희's Portfolio</title>
 </head>
 <body>
-  <p>Hello, i'm donghee</p>
+  <p>Hello, i'm DongHee Choi</p>
+  <p>Hello, i'm DongHee Choi</p>
+  <p>and this is my rezume</p>
+
 </body>
 </html>
