--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <p>Hello, i'm DongHee Choi</p>
-  <p>Hello, i'm DongHee Choi</p>
+  
   <p>and this is my rezume</p>
+
+  <p>This portfolio is continuously being revised.</p>
 
 </body>
 </html>
