--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 	<title>최동희's Portfolio</title>
 </head>
 <body>
-  <p>Hello, i'm DongHee Choi</p>
-  
-  <p>and this is my rezume</p>
+  <p>Hello, i'm DongHee Choi.</p>  
+  <p>and this is my rezume.</p>
 
   <p>This portfolio is continuously being revised.</p>
-
+  <p>This portfolio is continuously being revised.</p>
+  <p>This portfolio is continuously being revised.</p>
+	
 </body>
 </html>
